# Group-Project

./: README.md
Iteration1/: CMakeLists.txt  charttooltip.hpp  dataset.cpp  mainwindow.cpp  mainwindow.hpp  overviewpage.cpp  overviewpage.hpp
Water Quality Monitoring/: CMakeLists.txt  charttooltip.hpp  compliance_dashboard.cpp  compliance_dashboard.hpp  dashboard.cpp  dashboard.hpp  datamanager.cpp  enviwindow.cpp  fluorinatedcompounds.cpp  fluorinatedcompounds.hpp  fluorinatedcompounds.ui  main.cpp  mainwindow.cpp  map.qml  overviewpage.cpp  overviewpage.hpp  pop.cpp  pop.hpp  readme.md
Water Quality Monitoring OLD/: dashboard.cpp  dashboard.hpp  datamanager.hpp  enviwindow.cpp  enviwindow.hpp  fluorinatedcompounds.cpp  fluorinatedcompounds.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  overviewpage.hpp  pop.cpp  pop.hpp  pop.ui  readme.md
